# pffft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  bench_all.sh  bench_conv.cpp  bench_mixers.c  bench_pffft.c  bench_windowing.cpp  build_fftw.py  cross_build_android.py  cross_build_ios.py  fftpack.c  pf_altivec_float.h  pf_avx_double.h  pf_cic.cpp  pf_conv.cpp  pf_conv.h  pf_conv_dispatcher.cpp  pf_cplx.h  pf_double.h  pf_float.h  pf_helper_uclock.c  pf_helper_uclock.h  pf_mixer.cpp  pf_mixer.h  pf_neon_float.h  pf_scalar_double.h  pf_scalar_float.h  pf_sse1_float.h  pf_windowing.cpp  pf_windowing.h  pffastconv.c  pffastconv.h  pffft.c  pffft.h  pffft.hpp  pffft64.c  pffft64.h  (+14 more)
.github/workflows/: c-cpp.yml
bench/: CMakeLists.txt  make_charts.py  make_info.sh  unix_info.sh
benchmarks/: CMakeLists.txt  bench_conv.cpp  bench_mixers.cpp  bench_pffft.c  pf_conv.cpp  pf_conv.h
benchmarks/ffmpeg_tx/: CMakeLists.txt
cmake/: FindMIPP.cmake  pffft-config.cmake.in  target_optimizations.cmake
examples/: CMakeLists.txt  example_c_cplx_dbl_fwd.c  example_c_real_flt_fwd.c  example_cpp11_cplx_dbl_fwd.cpp  example_cpp11_real_dbl_fwd.cpp  example_cpp98_cplx_flt_fwd.cpp  example_cpp98_real_flt_fwd.cpp
include/pffft/: pf_carrier.h  pf_cic.h  pf_mixer.h  pffastconv.h  pffft.h  pffft.hpp  pffft_double.h
simd/: pf_altivec_float.h  pf_avx_double.h  pf_double.h  pf_float.h  pf_neon_double.h  pf_neon_double_from_avx.h  pf_neon_float.h  pf_scalar_double.h  pf_scalar_float.h  pf_sse1_float.h  pf_sse2_double.h
src/: fftpack.c  pf_cic.cpp  pffft_common.c  pffft_priv_impl.h
src/simd/: pf_altivec_float.h  pf_avx_double.h  pf_double.h  pf_float.h  pf_neon_double.h  pf_neon_double_from_avx.h  pf_neon_float.h  pf_scalar_double.h  pf_scalar_float.h  pf_sse1_float.h  pf_sse2_double.h  pf_wasm_double.h  pf_wasm_float.h
tests/: CMakeLists.txt  test_fft_factors.c  test_pffastconv.c  test_pffft.c  test_pffft.cpp
